Koan CHANGELOG
 
- Thu Jul 24 2008 Michael DeHaan <mdehaan@redhat.com> - 1.1.0-1
- Teach koan about ISO images 
- --list now takes a type of thing to list, removed --list-profiles, etc
- manpage cleanup
- remove debug print during --display

- Mon Jun 16 2008 Michael DeHaan <mdehaan@redhat.com> - 1.0.2-1
- Pay attention to remote http ports for kickstart URLs
- Fix error message for insufficient LVM volume group free space
- Fix bug in arch handling for qemu

- Fri Jun 06 2008 Michael DeHaan <mdehaan@redhat.com> - 1.0.1-1
- Fix problem that left cobbler kopts unused

- Wed May 27 2008 Michael DeHaan <mdehaan@redhat.com> - 1.0.0-1
- Release bump for 1.0/mirrors

* Thr May 14 2008 Michael DeHaan <mdehaan@redhat.com> - 0.9.2-2
- Added --virt-bridge override back
- misc cleanup

* Fri May 09 2008 Michael DeHaan <mdehaan@redhat.com> - 0.9.1-0
- Vmware installation hooks (experimental)
- add --add-reinstall-entry option (see manpage)
- request new URL locations
- removed --autonet code since it did not work on Python 2.3 (resubmission welcome)
- fixed XenFV support
- added --kopts for adding additional kernel options outside of cobbler

* Tue Feb 26 2008 Michael DeHaan <mdehaan@redhat.com> - 0.8.1-1
- manpage updates
- changes for new version of livecd creator

* Fri Feb 15 2008 Michael DeHaan <mdehaan@redhat.com> - 0.8.0-1
- Added --no-cobbler option so --replace-self is usable without cobbler servers
- ia64 fix for --replace-self
- don't print tracebacks when they are not needed

* Thu Jan 10 2008 Michael DeHaan <mdehaan@redhat.com> - 0.6.4-1
- Added --nogfx option, which is basically the inverse of the old --virt-graphics
- Allow Xen machines to be constructed with no disks (size=0), but not qemu/KVM
- Support Xen Fullvirt via PXE
- Add new --autonet command
- Fail if kernel argument length exceeds the 255 cap, as truncation can lead to hard to debug errors.

* Thu Nov 15 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.3-3