@@ -13,8 +13,8 @@ services --disable sshd
 # not work. Perhaps it has something to do with the default repos in
 # /etc/yum.repos.d not getting properly disabled?
 
-repo --name=todos --baseurl=http://download.fedora.redhat.com/pub/fedora/linux/releases/8/Everything/i386/os/
-repo --name=updatez --baseurl=http://download.fedora.redhat.com/pub/fedora/linux/updates/8/i386/
+repo --name=todos --baseurl=http://download.fedora.redhat.com/pub/fedora/linux/releases/9/Everything/i386/os/
+repo --name=updatez --baseurl=http://download.fedora.redhat.com/pub/fedora/linux/updates/9/i386/
 repo --name=newkoan --baseurl=file:///tmp/newkoan/
 
 text
