@@ -5,6 +5,7 @@ Koan CHANGELOG
 - --list now takes a type of thing to list, removed --list-profiles, etc
 - manpage cleanup
 - remove debug print during --display
+- update livecd builder to use F9 as src, reinstate livecd code.
 
 - Mon Jun 16 2008 Michael DeHaan <mdehaan@redhat.com> - 1.0.2-1
 - Pay attention to remote http ports for kickstart URLs
